Replace Collections.unmodifiableSet() with Set.of()